<resources>
    <string name="app_name">AtmEmpresaConsultoria</string>
    <string name="empresa_detalhes">Sobre a empresa</string>
    <string name="servico_detalhes">Serviços</string>
    <string name="texto_consultoria">Consultoria</string>
    <string name="processos_servicos">Processos</string>
    <string name="acompanhamento_servicos">Acompanhamento e projetos</string>
    <string name="nossos_clientes">Nossos Clientes</string>
    <string name="cliente_sys">Empresa de Desenvolvimento de Sistemas</string>
    <string name="cliente_rsm">Empresa de Auditoria</string>
    <string name="contato_activity">Contato</string>
    <string name="email_contato">Email: consultoria@atm.com.br</string>
    <string name="telefone_contato">Telefone: (11) 3333-2222</string>
    <string name="celular_contato">Celular: (11) 99999-8888</string>
</resources>
